--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.chewielouie.tictactoad"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:debuggable="true">
         <activity
                   android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden"
